#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-07-12  Christian Heller  <christian.heller@tuxtax.de>

        * Add "insert" container functionality

2011-07-10  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt "model_diagram_encoder.c" to new container functions

2011-07-09  Christian Heller  <christian.heller@tuxtax.de>

        * Continue restructuring container functionality
        * Complete "part_copier.c" and corresponding testing file "copier_tester.c"
        * Add "append" functionality to part and item copier, for convenience

2011-07-03  Christian Heller  <christian.heller@tuxtax.de>

        * Continue restructuring container functionality
        * Automatically adjust size and count when reallocating an item's data element
        * Make part copying work

2011-06-29  Christian Heller  <christian.heller@tuxtax.de>

        * Continue restructuring container functionality
        * Delete compound, use only part instead, since the necessary loop is already in "array_copier.c"
        * Merge offset container functions into regular files
        * Move "character_value_copier.c" and others one level up and delete "value" directory

2011-06-27  Christian Heller  <christian.heller@tuxtax.de>

        * Continue restructuring container functionality (fraction, compound)

2011-06-26  Christian Heller  <christian.heller@tuxtax.de>

        * Continue restructuring container functionality (part)

2011-06-25  Christian Heller  <christian.heller@tuxtax.de>

        * Rename "executor/referencer/" into "executor/copier/",
            which is used for setting (copying) container elements;
            getting container elements is done via pointer array,