@@ -1,3 +1,3 @@
 SUBDIRS = controller
 
-EXTRA_DIST = applicator constant executor logger variable architecture.odp architecture.pdf source_structure.txt todo_cyboi_java_comparison.txt todo.txt
+EXTRA_DIST = applicator constant executor logger variable architecture.odp architecture.pdf architecture.png architecture.xmi source_structure.txt todo_cyboi_java_comparison.txt todo.txt
