@@ -23,35 +23,135 @@
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
-#ifndef APPENDER_SOURCE
-#define APPENDER_SOURCE
+#ifndef ARRAY_REMOVER_SOURCE
+#define ARRAY_REMOVER_SOURCE
 
-#include "../../constant/model/log/message_log_model.c"
-#include "../../executor/modifier/replacer.c"
-#include "../../logger/logger.c"
+#include "../../../constant/abstraction/memory/primitive_memory_abstraction.c"
+#include "../../../constant/abstraction/operation/primitive_operation_abstraction.c"
+#include "../../../constant/model/log/message_log_model.c"
+#include "../../../constant/model/memory/integer_memory_model.c"
+#include "../../../executor/arithmetiser/integer_subtracter.c"
+#include "../../../executor/memoriser/reallocator/array_reallocator.c"
+#include "../../../logger/logger.c"
 
 /**
- * Appends the source to the end of the destination.
+ * Removes the given number of array elements.
  *
- * This function is "syntactic sugar" for the programmer.
- * It just calls the "replace_adjust" function with the
- * destination's count as index for appending the source.
+ * All current elements existing behind the area to be removed
+ * from the array are moved towards the beginning.
  *
- * @param p0 the destination (Hand over as reference!)
- * @param p1 the destination count
- * @param p2 the destination size
- * @param p3 the source
- * @param p4 the source count
- * @param p5 the abstraction
- * @param p6 the abstraction count
+ * This is done in a FORWARD order, starting from the first element
+ * (behind the area to be removed) since otherwise,
+ * overlapping elements might get overwritten.
+ *
+ * Example:
+ *
+ * array: "Hello, XYZWorld!"
+ * count: 3
+ * index: 7
+ * array count: 16
+ * ==> result: "Hello, World!"
+ *
+ * @param p0 the array (Hand over as reference!)
+ * @param p1 the operand abstraction
+ * @param p2 the count
+ * @param p3 the index
+ * @param p4 the array count
+ * @param p5 the array size
  */
-void append(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6) {
+void remove_array_inside(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5) {
 
-    log_terminated_message((void*) INFORMATION_LEVEL_LOG_MODEL, (void*) L"Append.");
+    if (p0 != *NULL_POINTER_MEMORY_MODEL) {
 
-    // Use the destination's count as index for appending the source.
-    replace_adjust(p0, p1, p2, p3, p4, p1, p5, p6);
+        void** d = (void**) p0;
+
+        log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Remove array elements.");
+
+        // The move source index.
+        int i = *NUMBER_0_INTEGER_MEMORY_MODEL;
+        // The move source count.
+        int c = *NUMBER_0_INTEGER_MEMORY_MODEL;
+        // The new size.
+        int n = *NUMBER_0_INTEGER_MEMORY_MODEL;
+
+        // Add index.
+        add_integer((void*) &i, p3, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+        // Add count.
+        add_integer((void*) &i, p2, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+
+        // Add array count.
+        add_integer((void*) &c, p4, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+        // Subtract move source index.
+        subtract_integer((void*) &c, (void*) &i, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+
+        // Add array count.
+        add_integer((void*) &n, p4, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+        // Subtract count of elements to be removed.
+        subtract_integer((void*) &n, p2, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+
+        // Move current elements behind area to be removed towards the beginning of the array.
+        // CAUTION! Move array elements starting from the FIRST since otherwise,
+        // overlapping array elements might get overwritten!
+        // CAUTION! Call this function BEFORE resizing the array
+        // since elements might get lost while shrinking the array.
+        copy_array_forward(*d, *d, p1, (void*) &c, p3, (void*) &i);
+
+        // The comparison result.
+        int r = *NUMBER_0_INTEGER_MEMORY_MODEL;
+
+        compare_value((void*) &r, (void*) &n, p5, (void*) SMALLER_PRIMITIVE_OPERATION_ABSTRACTION, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+
+        if (r != *NUMBER_0_INTEGER_MEMORY_MODEL) {
+
+            // Shrink array using new count as size.
+            reallocate_array(p0, p4, (void*) &n, p1);
+
+            // Set new size.
+            assign_integer(p5, (void*) &n);
+        }
+
+        // Assign destination array count.
+        assign_integer(p4, (void*) &n);
+
+    } else {
+
+        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not remove array elements. The array is null.");
+    }
 }
 
-/* APPENDER_SOURCE */
+/**
+ * Removes the given number of elements from the array,
+ * starting from the given index.
+ *
+ * @param p0 the array (Hand over as reference!)
+ * @param p1 the operand abstraction
+ * @param p2 the count
+ * @param p3 the index
+ * @param p4 the array count
+ * @param p5 the array size
+ */
+void remove_array(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5) {
+
+    log_terminated_message((void*) INFORMATION_LEVEL_LOG_MODEL, (void*) L"Remove array.");
+
+    // The comparison result.
+    int r = *NUMBER_0_INTEGER_MEMORY_MODEL;
+
+    if (r == *NUMBER_0_INTEGER_MEMORY_MODEL) {
+
+        compare_value((void*) &r, p3, p4, (void*) SMALLER_PRIMITIVE_OPERATION_ABSTRACTION, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+
+        if (r != *NUMBER_0_INTEGER_MEMORY_MODEL) {
+
+            remove_array_inside(p0, p1, p2, p3, p4, p5);
+        }
+    }
+
+    if (r == *NUMBER_0_INTEGER_MEMORY_MODEL) {
+
+        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not remove array. The destination index is outside the array boundaries.");
+    }
+}
+
+/* ARRAY_REMOVER_SOURCE */
 #endif
